--- a/AltGen-vue-app/index.html
+++ b/AltGen-vue-app/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="app"></div>  <!-- Vue mounts here -->
-    <script type="module" src="/src/main.js"></script> <!-- Loads Vue app -->
+    <script type="module" src="/src/main.ts"></script> <!-- Loads Vue app -->
 </body>
 </html>
